{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 1064,
  "lineage": "bd1e8cd2-c1be-05a5-a002-ac28a48f3394",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ceea4dec3084398",
            "association_id": "eipassoc-07c7422540a0d3626",
            "domain": "vpc",
            "id": "eipalloc-04ceea4dec3084398",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0791f52ad04c8f36e",
            "private_dns": "ip-10-0-1-30.us-west-2.compute.internal",
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-44-224-38-28.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.38.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TFEKSWorkshop-ngw-ip"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-ngw-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "EKS_POC_PROJECT_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:internet-gateway/igw-00a9b765cb5526e23",
            "id": "igw-00a9b765cb5526e23",
            "owner_id": "819908264955",
            "tags": {
              "Name": "TFEKSWorkshop-igw"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-igw"
            },
            "vpc_id": "vpc-0252ae9ff2fb84be1"
          },
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ceea4dec3084398",
            "association_id": "eipassoc-07c7422540a0d3626",
            "connectivity_type": "public",
            "id": "nat-0057416bb308a3560",
            "network_interface_id": "eni-0791f52ad04c8f36e",
            "private_ip": "10.0.1.30",
            "public_ip": "44.224.38.28",
            "subnet_id": "subnet-0306f0bf2ff1c0b57",
            "tags": {
              "Name": "TFEKSWorkshop-ngw"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-ngw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.AZ1_private",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07e3b2d292c079dcd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0057416bb308a3560",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e3b2d292c079dcd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_subnet.AZ1_private",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:route-table/rtb-0142b74cf9c95cfd9",
            "id": "rtb-0142b74cf9c95cfd9",
            "owner_id": "819908264955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a9b765cb5526e23",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TFEKSWorkshop-Default-rt"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-Default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252ae9ff2fb84be1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.EKS_POC_PROJECT_vpc",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02370669c2b62aa50",
            "route_table_id": "rtb-0142b74cf9c95cfd9",
            "subnet_id": "subnet-0306f0bf2ff1c0b57"
          },
          "dependencies": [
            "aws_internet_gateway.EKS_POC_PROJECT_vpc",
            "aws_route_table.main",
            "aws_subnet.AZ1_private",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:security-group/sg-048ae133310f41b70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048ae133310f41b70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "TFEKSWorkshop-ControlPlane-sg",
            "name_prefix": "",
            "owner_id": "819908264955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-ControlPlane-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-ControlPlane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252ae9ff2fb84be1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:security-group/sg-0d781c444032dc73f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d781c444032dc73f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "TFEKSWorkshop-Worker-sg",
            "name_prefix": "",
            "owner_id": "819908264955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-Worker-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-Worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252ae9ff2fb84be1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:security-group/sg-0774d3378db73472c",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster API Server to communicate with the worker nodes",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f33d79e77314bf53"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0774d3378db73472c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f33d79e77314bf53"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "TFEKSWorkshop-cluster-sg",
            "name_prefix": "",
            "owner_id": "819908264955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-cluster-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252ae9ff2fb84be1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:security-group/sg-0f33d79e77314bf53",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f33d79e77314bf53",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0774d3378db73472c"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "TFEKSWorkshop-node-sg",
            "name_prefix": "",
            "owner_id": "819908264955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TFEKSWorkshop-node-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "owned"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-node-sg",
              "kubernetes.io/cluster/TFEKSWorkshop-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252ae9ff2fb84be1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1545804786",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0774d3378db73472c",
            "security_group_rule_id": "sgr-04056498788f21c3e",
            "self": false,
            "source_security_group_id": "sg-0f33d79e77314bf53",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-1752823698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0774d3378db73472c",
            "security_group_rule_id": "sgr-06e3364f6aab43c7e",
            "self": false,
            "source_security_group_id": "sg-0f33d79e77314bf53",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1170890084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048ae133310f41b70",
            "security_group_rule_id": "sgr-05f6f6c9ae138741f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3785001669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-048ae133310f41b70",
            "security_group_rule_id": "sgr-03c77308158da8dd7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1913852128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d781c444032dc73f",
            "security_group_rule_id": "sgr-015972bea7ea36b5e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-578474556",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d781c444032dc73f",
            "security_group_rule_id": "sgr-07c273e355cf46b61",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1143340603",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f33d79e77314bf53",
            "security_group_rule_id": "sgr-0f4153bc23bbf32fa",
            "self": false,
            "source_security_group_id": "sg-0774d3378db73472c",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-389357624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d781c444032dc73f",
            "security_group_rule_id": "sgr-04161b11ca14578ca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2021350445",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f33d79e77314bf53",
            "security_group_rule_id": "sgr-0e1544ded9ece8ac2",
            "self": false,
            "source_security_group_id": "sg-0f33d79e77314bf53",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AZ1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:subnet/subnet-0306f0bf2ff1c0b57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0306f0bf2ff1c0b57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819908264955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-private-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-private-sg"
            },
            "vpc_id": "vpc-0252ae9ff2fb84be1"
          },
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AZ2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:subnet/subnet-081bf9e16260a3b15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081bf9e16260a3b15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819908264955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFEKSWorkshop-private-sg"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-private-sg"
            },
            "vpc_id": "vpc-0252ae9ff2fb84be1"
          },
          "dependencies": [
            "aws_vpc.EKS_POC_PROJECT_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EKS_POC_PROJECT_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:819908264955:vpc/vpc-0252ae9ff2fb84be1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2e80a7b18f5204f",
            "default_route_table_id": "rtb-07e3b2d292c079dcd",
            "default_security_group_id": "sg-04cf469dee22405b7",
            "dhcp_options_id": "dopt-082333c3e108042a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0252ae9ff2fb84be1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e3b2d292c079dcd",
            "owner_id": "819908264955",
            "tags": {
              "Name": "TFEKSWorkshop-vpc"
            },
            "tags_all": {
              "Name": "TFEKSWorkshop-vpc"
            }
          }
        }
      ]
    }
  ]
}